# snake_game

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-exe.yml  publish-pypi.yml
src/snake_game/: __init__.py  game.py
