[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snake-game"
version = "0.1.0"
description = "A classic Snake game implemented with Python and Pygame"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "hackcpp", email = "liuheng2015@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Arcade",
]
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
snake-game = "snake_game.game:main"

[project.urls]
Homepage = "https://github.com/hackcpp/snake_game"
Repository = "https://github.com/hackcpp/snake_game.git"
Issues = "https://github.com/hackcpp/snake_game/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/snake_game"] 